--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -135,6 +135,9 @@ a.sidebar-nav-item:focus {
 }
 
 @media (min-width: 64em) {
+  .style{
+    width:fit-content;
+  }
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
