--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include sidebar.html %}
 
-    <div class="content container">
+    <div class="content container" style="max-width: fit-content;">
       {{ content }}
     </div>
 
