--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -110,7 +110,8 @@ a.sidebar-nav-item:focus {
   .sidebar-sticky {
     position: absolute;
     right:  1rem;
-    bottom: 1rem;
+    top: 20rem;
+/*     bottom: 1rem; */
     left:   1rem;
   }
 }
