--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div> -->
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item" href="{{site.baseurl}}index.html#abstract">About</a>
+      <a class="sidebar-nav-item" href="{{site.baseurl}}index#abstract">About</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
