--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,6 +11,7 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item" href="{{site.baseurl}}index">About</a>
+      <a class="sidebar-nav-item" href="{{site.baseurl}}index#resources">Resources</a>
       <a class="sidebar-nav-item" href="{{site.baseurl}}index#ontology">Ontology</a>
 
       {% comment %}
