--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,9 +10,9 @@
     </div> -->
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item" href="{{site.baseurl}}index">About</a>
-      <a class="sidebar-nav-item" href="{{site.baseurl}}index#resources">Resources</a>
-      <a class="sidebar-nav-item" href="{{site.baseurl}}index#ontology">Ontology</a>
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a>
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a>
+      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontology">Ontology</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
