--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
 
 <!--       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
-        {% if node.title != null %}
+        {% if node.title == "home" %}
           {% if node.layout == "page" %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{node.url}}">{{ node.title }}</a>
           {% endif %}
