--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,13 @@
       <ul style="list-style: none;">
       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li>
       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a></li>
-      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontology">Ontology</a></li>
+      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontology">Ontology</a>
+        <ul>
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontologylinks">Ontology Links</a>
+        </ul>
+        
+        </li>
+         
       
 
       {% comment %}
