--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,21 @@
     <div class="content container" style="max-width: fit-content;">
       {{ content }}
     </div>
+  <script>
+    var coll = document.getElementsByClassName("collapsible");
+    var i;
 
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.maxHeight){
+          content.style.maxHeight = null;
+        } else {
+          content.style.maxHeight = content.scrollHeight + "px";
+        } 
+      });
+    }
+</script>
   </body>
 </html>
