--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -258,16 +258,15 @@ a.sidebar-nav-item:focus {
   background-color: #aa759f;
   color: white;
   cursor: pointer;
-  padding: 18px;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .active, .collapsible:hover {
-  background-color: #555;
+  background-color: #aa759f;
 }
 
 .collapsible:after {
@@ -275,7 +274,6 @@ a.sidebar-nav-item:focus {
   color: white;
   font-weight: bold;
   float: right;
-  margin-left: 5px;
 }
 
 .active:after {
@@ -283,9 +281,9 @@ a.sidebar-nav-item:focus {
 }
 
 .button-content {
-  padding: 0 18px;
+  padding: 0 10px;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
+  background-color: #fde6ea;
 }
