--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -262,7 +262,7 @@ a.sidebar-nav-item:focus {
   border: none;
   text-align: left;
   outline: none;
-  font-size: 20px;
+  font-size: inherit;
 }
 
 .collapsible .sidebar-nav-item {
