--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -263,6 +263,7 @@ a.sidebar-nav-item:focus {
   text-align: inherit;
   outline: none;
   font-size: inherit;
+  padding-left:0;
 }
 
 .collapsible .sidebar-nav-item {
