--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,10 @@
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontology">Ontology</a></button>
         <div class="button-content">
         <ul>
-          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontologylinks">Ontology Links</a></li>
+          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontologyabout">About Ontology</a></li>
+          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontologylinks">Access Links</a></li>
+           <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#ontologymetadata">Ontology Metadata</a></li>
+
         </ul>
         </div>
         </li>
