--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -132,7 +132,7 @@ hr {
   position: relative;
   margin: 1.5rem 0;
   border: 0;
-  border-top: 1px solid #eee;
+  border-top: 1px solid #000000;
   border-bottom: 1px solid #fff;
 }
 
