--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,15 @@
         </ul>
         </div>
         </li>
+        <li><button class="collapsible">
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#modelingsnippets">Modeling Snippets</a></button>
+        <div class="button-content">
+          <ul>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#explanationtypes">Explanation Types</a></li>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#clinicalexample">Examples from Clinical Requirements Gathering Session</a></li>
+          </ul>
+        </div>
+        </li>
          
       
 
