--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,6 +33,8 @@
           </ul>
         </div>
         </li>
+        <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#toolsused">Tools Used</a></li>
+
          
       
 
