--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,6 +33,14 @@
           </ul>
         </div>
         </li>
+        <li><button class="collapsible">
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#competencyquestions">Competency Questions</a></button>
+        <div class="button-content">
+          <ul>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#sparql">SPARQL Queries</a></li>
+          </ul>
+        </div>
+        </li>
         <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#toolsused">Tools Used</a></li>
 
          
