Changing to a multi-page structure

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,16 +28,16 @@
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#modelingsnippets">Modeling Snippets</a></button>
         <div class="button-content">
           <ul>
-            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#explanationtypes">Explanation Types</a></li>
-            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#clinicalexample">Examples from Clinical Requirements Gathering Session</a></li>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#explanationtypes">Explanation Types</a></li>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#clinicalexample">Examples from Clinical Requirements Gathering Session</a></li>
           </ul>
         </div>
         </li>
         <li><button class="collapsible">
-<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#competencyquestions">Competency Questions</a></button>
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}competencyquestions">Competency Questions</a></button>
         <div class="button-content">
           <ul>
-            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#sparql">SPARQL Queries</a></li>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}competencyquestions#sparql">SPARQL Queries</a></li>
           </ul>
         </div>
         </li>
