--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
         </div>
         </li>
         <li><button class="collapsible">
-<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#modelingsnippets">Modeling Snippets</a></button>
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling">Modeling Snippets</a></button>
         <div class="button-content">
           <ul>
             <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#explanationtypes">Explanation Types</a></li>
