--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,14 +25,16 @@
         </div>
         </li>
         <li><button class="collapsible">
-<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling">Modeling Snippets</a></button>
-        <div class="button-content">
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling">Explanation Types</a></button>
+<!--         <div class="button-content">
           <ul>
             <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#explanationtypes">Explanation Types</a></li>
             <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#clinicalexample">Examples from Clinical Requirements Gathering Session</a></li>
           </ul>
-        </div>
+        </div> -->
         </li>
+         <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#clinicalexample">Clinical Example</a></li>
+
         <li><button class="collapsible">
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}competencyquestions">Competency Questions</a></button>
         <div class="button-content">
