Editing modeling navigation

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,12 +26,12 @@
         </li>
         <li><button class="collapsible">
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling">Explanation Types</a></button>
-<!--         <div class="button-content">
+        <div class="button-content">
           <ul>
-            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#explanationtypes">Explanation Types</a></li>
-            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#clinicalexample">Examples from Clinical Requirements Gathering Session</a></li>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#explanationtypes">Catalog</a></li>
+            <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}modeling#modelingexplanations">Modeling</a></li>
           </ul>
-        </div> -->
+        </div>
         </li>
          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}clinicalexample">Clinical Example</a></li>
 
