--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,6 +13,7 @@
       <ul style="list-style: none;">
       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li>
       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a></li>
+              <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}protocol">Protocol Guidance</a></li>
       <li><button class="collapsible">
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}ontology">Ontology</a></button>
         <div class="button-content">
