--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -45,6 +45,8 @@
         </div>
         </li>
         <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#toolsused">Tools Used</a></li>
+                <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}publications">Publications</a></li>
+
 
          
       
