--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,18 @@
 
     <nav class="sidebar-nav">
       <ul style="list-style: none;">
-      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li>
+        <li><button class="collapsible">
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></button>
+        <div class="button-content">
+        <ul>
+          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#abstract">Description</a></li>
+
+          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#publication">Publications</a></li>
+
+        </ul>
+        </div>
+        </li>
+<!--       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li> -->
       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a></li>
               <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}protocol">Protocol Guidance</a></li>
       <li><button class="collapsible">
