--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,15 @@
         </div>
         </li>
 <!--       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li> -->
-      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a></li>
+      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a>
+        
+        <div class="button-content">
+        <ul>
+          <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}presentations">Presentations</a></li>
+
+        </ul>
+        </div>
+        </li>
               <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}protocol">Protocol Guidance</a></li>
       <li><button class="collapsible">
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}ontology">Ontology</a></button>
