--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,7 +23,8 @@
         </div>
         </li>
 <!--       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li> -->
-      <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a>
+      <li><button class="collapsible">
+        <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a>
         
         <div class="button-content">
         <ul>
