--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,14 +22,11 @@
         </ul>
         </div>
         </li>
-<!--       <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index">About</a></li> -->
       <li><button class="collapsible">
-        <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resources">Resources</a>
-        
+<a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}index#resoruces">Resources</a></button>
         <div class="button-content">
         <ul>
           <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}presentations">Presentations</a></li>
-
         </ul>
         </div>
         </li>
