--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -51,7 +51,7 @@
           </ul>
         </div>
         </li>
-         <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}clinicalexample">Clinical Example</a></li>
+         <li><a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}clinicalexample">Examples</a></li>
 
         <li><button class="collapsible">
 <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{site.baseurl}}competencyquestions">Competency Questions</a></button>
